# the-pretender-atari-ste

./: .gitignore  README.md  pyproject.toml  retest
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: main.yml
src/: __init__.py
src/pretender/atari_ste/: __init__.py  address_decoder.py
tests/modules/: test_address_decoder.py
