### [project] section: 
###     see https://peps.python.org/pep-0621/
### [build-system] section: 
###     see https://peps.python.org/pep-0517/
###     see https://peps.python.org/pep-0518/
### see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[build-system]
requires = ["setuptools>=61", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "the-pretender-atari-ste-by-sporniket"
#version = "0.0.1"
description = "An FPGA project that implements the memory map of the computer known as Atari STe, using amaranth-hdl."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["amaranth","amaranth-hdl","nmigen", "hdl", "fpga", "atari ste", "emulation"]
license = {file = "LICENSE"}
authors = [{name="Sporniket", email="sporniket.studio@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
]
dependencies = [
    "amaranth @ git+https://github.com/amaranth-lang/amaranth@3a51b612844a23b08e744c4b3372ecb44bf9fe5d",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards@2d0a23b75ebb769874719297dec65ff07ca9e79f",
    "amaranth-stuff-by-sporniket @ git+https://github.com/sporniket/amaranth-stuff@256bb0a1afac22b8311e5c660b8213f9dd444c94",
    'importlib-metadata; python_version>"3.8"',
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/sporniket/the-pretender-atari-ste"
#TODO documentation = "https://readthedocs.org"
repository = "https://github.com/sporniket/the-pretender-atari-ste"
bug-tracker = "https://github.com/sporniket/the-pretender-atari-ste/issues"